--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/transport?createDatabaseifNotE
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#hibernate details
 spring.jpa.hiberante.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=true 
 spring.jpa.properties.hiberante.formata_sql=true
 spring.jpa.database-platform=org.hiberante.dialect.MySQL8Dialect
