--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,11 @@ server.port = 9001
 server.forward-headers-strategy=framework 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/transport?createDatabaseifNotExist=true   #for identification
+spring.datasource.url=jdbc:mysql://localhost:3306/transport?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#hibernate details
-spring.jpa.hiberante.ddl-auto=update
-spring.jpa.show-sql=true 
-spring.jpa.properties.hiberante.formata_sql=true
-spring.jpa.database-platform=org.hiberante.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
